Restore indexed get in sequence